# spatle

./: README.md  pyproject.toml
spatle/: cli.py  game.py  server.py
spatle/sources/: README.md  default.txt
test/: test_game.py
